[package]
name = "seeed-lora-e5-at-commands"
version = "0.1.0"
edition = "2021"

authors = ["Michael van Niekerk <mike@agri-io.co.za>"]

documentation = "https://docs.rs/seed-lora-e5-at"
repository = "https://github.com/mvniekerk/seeed-lora-e5-at-commands"

description = "AT commands for the Seeed LoRa-E5 module."

license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["at", "lora", "no_std", "seeed", "async"]

categories = ["embedded", "hardware-support", "network-programming"]

[dependencies]
atat = { git = "https://github.com/mvniekerk/atat.git", commit = "17a32b47eb8320e12fe6a93c921e334ed61fddf9",  default-features=false, features = ["derive", "bytes", "hex_str_arrays", "async"] }
atat_derive = { git = "https://github.com/mvniekerk/atat.git", commit = "17a32b47eb8320e12fe6a93c921e334ed61fddf9" }
serde_at = { git = "https://github.com/mvniekerk/atat.git", commit = "17a32b47eb8320e12fe6a93c921e334ed61fddf9", default-features=false, features = ["hex_str_arrays"] }
nb = { version = "1" }
heapless = "0.7"
heapless-bytes = "0.3"
defmt = { version = "0.3", optional = true }
embedded-io = { version = "0.5.0", optional = true }
embedded-io-async = { version = "0.5.0", optional = true }
embassy-sync = "0.2.0"

[features]
debug = ["atat/defmt", "defmt", "embedded-io-async/defmt-03"]
async = ["atat/async", "embedded-io", "embedded-io-async"]
default = ["debug", "async"]