[package]
name = "seeed-lora-e5-at-commands"
version = "0.1.0"
edition = "2021"

authors = ["Michael van Niekerk <mike@agri-io.co.za>"]

documentation = "https://docs.rs/seed-lora-e5-at"
repository = "https://github.com/mvniekerk/seeed-lora-e5-at-commands"

description = "AT commands for the Seeed LoRa-E5 module."

license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["at", "lora", "no_std", "seeed", "async"]

categories = ["embedded", "hardware-support", "network-programming"]

[dependencies]
atat = { version = "0.22.0", features = ["derive", "bytes", "hex_str_arrays"] }
atat_derive = "0.22.0"
serde_at = { version = "0.22.0", features = ["hex_str_arrays", "heapless"] }
nb = { version = "1" }
heapless = "0.8.0"
heapless-bytes = "0.3"
defmt = { version = "0.3", optional = true }
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
embassy-sync = "0.5"

[features]
debug = ["atat/defmt", "defmt", "embedded-io-async/defmt-03"]
async = ["embedded-io", "embedded-io-async"]
default = ["debug", "async"]