[package]
name = "seeed-lora-e5-pico-pio"
version = "0.1.0"
edition = "2021"

[dependencies]
seeed-lora-e5-at-commands = { path = "../../", default-features=false, features = ["async", "debug"] }

atat = { git = "https://github.com/BlackbirdHQ/atat.git", commit = "c5caaf7588c500af35d1c9be4229e47893845864",  default-features=false, features = ["derive", "bytes", "hex_str_arrays", "async"] }
embassy-executor = { version = "0.2.0",  features = ["defmt", "integrated-timers", "nightly", "executor-thread", "arch-cortex-m"] }
embassy-time = { version = "0.1",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1",  features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
embassy-sync = { version = "0.2.0", features = ["defmt", "nightly"] }
atomic-polyfill = "0.1.5"
static_cell = "1.0"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.9" }
embedded-hal-async = { version = "0.2.0-alpha.0" }
embedded-io = "0.5.0"
embedded-io-async = "0.5.0"
heapless = "0.7"

#bbqueue = { version = "0.5", features = ["thumbv6", "defmt_0_3"]}
bbqueue = { git = "https://github.com/jamesmunns/bbqueue", rev = "refs/pull/95/head", default-features=false, features = ["thumbv6"] }

fugit = { version ="0.3",  default-features = false }
nb = { version = "1", default-features = false }

embedded-alloc = "0.5.0"

fixed = "1.23.1"
fixed-macro = "1.2"

pio-proc = "0.2"
pio = "0.2.1"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fcb77f3f96479b371e1279c9feed7eddf6b53083" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fcb77f3f96479b371e1279c9feed7eddf6b53083" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "fcb77f3f96479b371e1279c9feed7eddf6b53083" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "fcb77f3f96479b371e1279c9feed7eddf6b53083" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "fcb77f3f96479b371e1279c9feed7eddf6b53083" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
