[package]
name = "seeed-lora-e5-pico-uart"
version = "0.1.0"
edition = "2021"

[dependencies]
seeed-lora-e5-at-commands = { path = "../../", default-features=false, features = ["async", "debug"] }

atat = { version = "0.22.0",  default-features=false, features = ["derive", "bytes", "hex_str_arrays"] }
embassy-executor = { version = "0.5",  features = ["defmt", "integrated-timers", "nightly", "executor-thread", "arch-cortex-m"] }
embassy-time = { version = "0.3",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1",  features = ["defmt", "unstable-pac", "time-driver"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
atomic-polyfill = "1.0.3"
static_cell = "2.0.0"

defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1" }
embedded-hal-async = { version = "1" }
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
heapless = "0.8.0"

bbqueue = { git = "https://github.com/jamesmunns/bbqueue", rev = "d9f647f0545fc1fc4dcdbba142b29e1fd98da38b", default-features=false, features = ["thumbv6"] }

fugit = { version ="0.3",  default-features = false }
nb = { version = "1", default-features = false }

embedded-alloc = "0.5"

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
